# omp-randarray

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  hsize.c  randarray.c  timer.c  timer.h
